<resources>
    <string name="app_name">Application160519</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered">already registered ?</string>
    <string name="logout">Logout</string>
    <string name="pick_dob">pick dob</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="id">Id</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_profile">Profile</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">Confirm to delete this User ?</string>
    <string name="dob">dob</string>
    <string name="image_bytes">image byte</string>

    <string name="anime">Anime</string>

    <string name="all">All</string>
    <string name="airing">Airing</string>
    <string name="upcoming">Upcoming</string>
    <string name="tv">TV</string>
    <string name="movie">Movie</string>
    <string name="ova">Ova</string>
    <string name="special">Special</string>
    <string name="bypopularity">Bypopularity</string>
    <string name="favorite">Favorite</string>

    <string name="url">url</string>

    <string name="helpful_count_review_text"> people found this review helpful</string>
    <string name="episodes_seen"> episodes seen</string>
    <string name="overall_rating">Overall Rating:</string>
    <string name="replies">Replies: </string>
    <string name="search">Search</string>
    <string name="search_hint">Search Anime</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_url">video_url</string>
    <string name="is_youtube_link">is_youtube_link</string>
    <string name="remember_me">Remember Me</string>
</resources>
