<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".75"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/user_id_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/user_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_user_check_box"
            android:layout_marginLeft="16dp"
            android:text="@string/remember_me"
            android:textAppearance="?android:textAppearanceSmall"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</ScrollView>