<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="48sp" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/signup_user_iv"
            android:padding="12dp"
            android:src="@mipmap/ic_user_image"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/fname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/first_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/lname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/last_name"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dob_btn"
                android:text="@string/pick_dob"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16dp"
                android:textSize="18sp"
                android:id="@+id/dob_tv"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/user_id_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/user_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/already_registered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/already_registered" />

    </LinearLayout>

</ScrollView>